Add multi-version support.

--- a/templates/default/rabbit_gateway-config.yml.erb
+++ b/templates/default/rabbit_gateway-config.yml.erb
@@ -7,6 +7,12 @@ service:
   plans: ["free"]
   tags: ["rabbitmq", "rabitmq-2.4", "message-queue", "amqp"]
   timeout: <%= node['cloudfoundry_rabbitmq_service']['gateway']['timeout'] %>
+  supported_versions: [<%= cfservicegw_supported_versions_string('rabbitmq') %>]
+  version_aliases:
+  <% node['cloudfoundry_rabbitmq_service']['gateway']['version_aliases'].each do |a, v| %>
+    "<%= a %>": "<%= v %>"
+  <% end %>
+
 host: localhost
 node_timeout: <%= node['cloudfoundry_rabbitmq_service']['gateway']['node_timeout'] %>
 index: 0
