--- a/templates/default/rabbit_gateway-config.yml.erb
+++ b/templates/default/rabbit_gateway-config.yml.erb
@@ -5,6 +5,7 @@ service:
   version: "2.4"
   description: "RabbitMQ message queue"
   plans: ["free"]
+  default_plan: 'free'
   tags: ["rabbitmq", "rabbitmq-2.4", "message-queue", "amqp"]
   timeout: <%= node['cloudfoundry_rabbitmq_service']['gateway']['timeout'] %>
   supported_versions: [<%= cfservicegw_supported_versions_string('rabbitmq') %>]
