--- a/templates/default/rabbit_node-config.yml.erb
+++ b/templates/default/rabbit_node-config.yml.erb
@@ -14,12 +14,18 @@ logging:
   level: <%= node['cloudfoundry_rabbitmq_service']['node']['log_level'] %>
   file: <%= @log_file %>
 pid: <%= @pid_file %>
+max_memory_factor: <%= node['cloudfoundry_rabbitmq_service']['node']['max_memory_factor'] %>
 node_id: rabbitmq_node_<%= node['cloudfoundry_rabbitmq_service']['node']['index'] %>
 supported_versions: [<%= supported_versions %>]
 default_version: "<%= node['cloudfoundry_rabbitmq_service']['node']['default_version'] %>"
 
 migration_nfs: <%= node['cloudfoundry_rabbitmq_service']['node']['migration_nfs'] %>
+<% if node['cloudfoundry_rabbitmq_service']['node']['ip_route'] %>
+ip_route: <%= node['cloudfoundry_rabbitmq_service']['node']['ip_route'] %>
+<% end %>
+z_interval: <%= node['cloudfoundry_rabbitmq_service']['node']['z_interval'] %>
 max_clients: <%= node['cloudfoundry_rabbitmq_service']['node']['max_clients'] %>
+max_nats_payload: <%= node['cloudfoundry_rabbitmq_service']['node']['max_nats_payload'] %>
 port_range:
   first: <%= node['cloudfoundry_rabbitmq_service']['node']['port_range']['first'] %>
   last: <%= node['cloudfoundry_rabbitmq_service']['node']['port_range']['last'] %>
@@ -29,3 +35,5 @@ admin_port_range:
 rabbitmq_log_dir: <%= node['cloudfoundry_rabbitmq_service']['node']['db_logs_dir'] %>
 rabbitmq_server: <%= node['cloudfoundry_rabbitmq_service']['path'] %>/sbin/rabbitmq-server
 rabbitmq_start_timeout: 10
+fqdn_hosts: <%= node['cloudfoundry_rabbitmq_service']['node']['fqdn_hosts'] %>
+op_time_limit: <%= node['cloudfoundry_rabbitmq_service']['node']['op_time_limit'] %>
